# GPT-from-Scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt  scaling_study.py
.github/workflows/: ci.yml
notebooks/: train_gpt.ipynb
paper/: report.tex
scripts/: generate.py  prepare_data.py  scaling_study.py  smoke_test.py  train.py
src/minigpt/: __init__.py  data.py  model.py  train.py
tests/: test_kv_cache.py  test_model.py
